--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <style>
         .mainWidth{
-            width: 18%;
+            width: auto;
             height: auto;
         }
         .Text_Size{
