--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Toast.fire({
     icon: 'success',
     title: 'Signed in successfully'
 })
-window.location.assign("./html/index.html");
+window.location.assign("html.html");
 
                 }else{
                 Swal.fire({
