--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Toast.fire({
     icon: 'success',
     title: 'Signed in successfully'
 })
-window.location.assign("https://www.youtube.com/c/VirtualPanthervasoyaparth");
+window.location.assign("https://vasoyaparth.github.io/Vasoya_Parth_portfolio/");
 
                 }else{
                 Swal.fire({
